--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             line-height: 1.1;
-            animation: titleGlow 4s ease-in-out infinite;
+            /* animation: titleGlow 4s ease-in-out infinite; */
         }
 
         .hero-highlight {
